Fix dropdown z-index

--- a/stylesheets/ui/_dropdown.scss
+++ b/stylesheets/ui/_dropdown.scss
@@ -11,7 +11,7 @@
   top: 100%;
   list-style: none;
   margin: 0;
-  z-index: 1;
+  z-index: 2;
   display: none;
   .open & {
     display: block;
